WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225467
REGRESSION (Safari 14): Submenus on
https://codelearn.cat
don't show
https://bugs.webkit.org/show_bug.cgi?id=225467
Summary
REGRESSION (Safari 14): Submenus on https://codelearn.cat don't show
Simon Fraser (smfr)
Reported
2021-05-06 09:59:29 PDT
Hover the menus on
https://codelearn.cat
: hover "Centres" then "Barcelona" and the hover menus fail to appear. To reproduce, your window needs to be short enough for the longer menus to scroll.
Attachments
Patch
(5.99 KB, patch)
2021-06-09 10:55 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-05-06 10:00:21 PDT
<
rdar://problem/77612276
>
Simon Fraser (smfr)
Comment 2
2021-05-06 10:00:32 PDT
Probably related to async overflow scroll and compositing.
Simon Fraser (smfr)
Comment 3
2021-06-08 14:20:37 PDT
This might be fallout from the RenderLayer/ScrollableArea split. There's a composited layer with overflow:scroll, and overflow is being toggled to 'visible'. We fail to remove the compositing clipping layer, so the content remains clipped. This is happening because RenderBox::requiresLayerWithScrollableArea() is called from RenderLayer::styleChanged() (i.e. before layout) but it consults hasHorizontalOverflow() || hasVerticalOverflow() which depend on layout.
Simon Fraser (smfr)
Comment 4
2021-06-08 14:21:03 PDT
We also never remove the RenderLayerScrollableArea and it seems like we should.
Simon Fraser (smfr)
Comment 5
2021-06-09 10:55:29 PDT
Created
attachment 430979
[details]
Patch
EWS
Comment 6
2021-06-22 11:33:32 PDT
Committed
r279130
(
239044@main
): <
https://commits.webkit.org/239044@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430979
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug